--- a/src/main.css
+++ b/src/main.css
@@ -26,7 +26,7 @@
 }
 
 .theme-dark .markdown-body {
-    color: #24292e;
+  color: #24292e;
 }
 
 .theme-dark .search-highlighted {
@@ -38,24 +38,24 @@
 }
 
 .theme-dark {
-  --bg-background-primary: #0D2438;
-  --bg-background-secondary: #102C44;
-  --bg-background-tertiary: #1E3951;
+  --bg-background-primary: #0d2438;
+  --bg-background-secondary: #102c44;
+  --bg-background-tertiary: #1e3951;
 
   --bg-background-form: #1a202c;
 
   --text-copy-primary: #cbd5e0;
   --text-copy-secondary: #e2e8f0;
 
-  --border-border-color-primary:  #1a202c;
+  --border-border-color-primary: #1a202c;
 }
 
 .theme-dark .markdown-body {
-    color: #cbd5e0;
+  color: #cbd5e0;
 }
 
 .content-wrapper {
-  transition: background-color .25s;
+  transition: background-color 0.25s;
 }
 
 a {
@@ -90,7 +90,7 @@ nav .active {
 
 @media (min-width: 1024px) {
   .container-inner {
-    max-width: 800px;
+    max-width: 1024px;
   }
 }
 
@@ -113,4 +113,13 @@ nav .active {
   width: 100%;
   height: 100%;
   border: 0;
+}
+
+.bg-gradient {
+  background-image: linear-gradient(
+    180deg,
+    #000 0,
+    rgba(0, 0, 0, 0.3) 50%,
+    transparent
+  );
 }
